[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my_minipack"
version = "1.0.0"
authors = [
  { name="M'hamed Noé Ababou", email="mababou@student.42.fr" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ababoum/42_python_pool"
"Bug Tracker" = "https://github.com/ababoum/42_python_pool/issues"